--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
     </header>
     <main>
         <br>
-        <form action="mailto:dustinbryant@my.cwi.edu" enctype="text/plain" id="contact" method="POST" name="contact">
+        <form name="contact" id="contact" method="POST" action="thankyou.php">
             <fieldset>
                 <fieldset id="contactinfo">
                     <legend>Please enter your contact information:</legend>
@@ -45,7 +45,7 @@
                         </tr>
                         <tr>
                             <td><label for="telephone">Phone Number: </label></td>
-                            <td><input type="tel" id="telphone" name="telephone"></td>
+                            <td><input type="tel" id="telephone" name="telephone"></td>
                         </tr>
                         <tr>
                             <td><label for="email">E-mail: </label></td>
@@ -71,8 +71,8 @@
                 </fieldset>        
                 <br>
                 <fieldset> 
-                <label for="comments">Is there anything else I need to know?<br></label><textarea id="comments" name="comments" rows="5" cols="50"></textarea><br>
-                <input type="submit">
+                <label for="comments">Is there  else I need to know?<br></label><textarea id="comments" name="comments" rows="5" cols="50"></textarea><br>
+                <input type="" value="test">
                 </fieldset>
             </fieldset>
         </form>
