--- a/contact.html
+++ b/contact.html
@@ -71,8 +71,8 @@
                 </fieldset>        
                 <br>
                 <fieldset> 
-                <label for="comments">Is there  else I need to know?<br></label><textarea id="comments" name="comments" rows="5" cols="50"></textarea><br>
-                <input type="" value="test">
+                <label for="comments">Is there anything else I need to know?<br></label><textarea id="comments" name="comments" rows="5" cols="50"></textarea><br>
+                <input type="submit" >
                 </fieldset>
             </fieldset>
         </form>
