--- a/contact.html
+++ b/contact.html
@@ -1,16 +1,7 @@
 <!DOCTYPE html>
 
 <!-- Dustin Bryant 11/7/19 -->
-<!--<?php 
-//select all toppings 
-    $howcontact = filter_input(INPUT_POST, 'howcontact', 
-            FILTER_SANITIZE_SPECIAL_CHARS, FILTER_REQUIRE_ARRAY);
-    if ($howcontact !== NULL) {
-        $top1 = $toppings[0];       // $top1 is pep
-        $top2 = $toppings[1];       // $top2 is olv
-        $top3 = $toppings[2];       // $top3 is not set – error
-    }
-    ?>-->
+<!-- Dustin Bryant updated 9/4/20 -->
 
 <html lang="en">
 <head>
