--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
 <body>    
     <header>
         <div class="top">
-            <a href="index.html"><img src="images/default_user_icon.png" alt="user icon" style="height:150px;width:auto;"/></a>
+            <a href="index.html"><img src="images/logo.svg" alt="user icon"/></a>
             <h1>Dustin Bryant</h1>
         </div>
         <nav>
@@ -25,17 +25,18 @@
                 <li class="fade"><a href="index.html">Home</a></li>
                 <li class="fade"><a href="about.html">About</a></li>
                 <li class="fade"><a href="experience.html">Experience</a></li>
-                <li class="fade"><a href="contact.html">Contact</a></li>                
+                <li class="fade"><a href="contact.html">Contact</a></li>  
+                <li class="fade"><a href="login.php">Admin</a></li>
             </ul>
         </nav>
     </header>
     <main>
         <br>
         <form name="contact" id="contact" method="POST" action="thankyou.php">
-            <fieldset>
+            <fieldset><!-- This fieldset is for the outer border around all the form elements -->
                 <fieldset id="contactinfo">
                     <legend>Please enter your contact information:</legend>
-                    <table>
+                    <table><!-- Added a table inside the contact information section in order to align the textboxes -->
                         <tr>
                             <td><label for="name">Name: </label></td>
                             <td><input type="text" id="name" name="name" required></td>
@@ -79,13 +80,15 @@
         </form>
     </main>
     <br>
-    <footer id="bottom">        
-            Email: <a href="mailto:dustinbryant@my.cwi.edu">dustinbryant@my.cwi.edu</a><br>
-            Phone: <a href="tel:+12088907307">208-890-7307</a>        
-        <div>
-            <a href="https://www.github.com" target="_blank"><img src="images/github-48.png" alt="githup logo"></a>
-            <a href="https://www.linkedin.com" target="_blank"><img src="images/linkedin-48.png" alt="githup logo"></a>
-        </div>                    
-    </footer>
+     <footer>
+            <div id="bottom"><!-- The bottom id aligns the contact info. -->        
+                Email: <a href="mailto:dustinbryant@my.cwi.edu">dustinbryant@my.cwi.edu</a><br>
+                Phone: <a href="tel:+12088907307">208-890-7307</a>              
+                <div>
+                    <a href="https://www.github.com" target="_blank"><img src="images/github-48_gray.png" alt="githup logo"></a>
+                    <a href="https://www.linkedin.com" target="_blank"><img src="images/linkedin-48_gray.png" alt="githup logo"></a>
+                </div> 
+            </div>                   
+        </footer>
 </body>
 </html>
