--- a/experience.html
+++ b/experience.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 
-<!-- Dustin Bryant 11/7/19 -->
+<!--  
+Original Author: Dustin Bryant
+Date Created: 11/7/19
+Version: 1.0
+Date Last Modified: 2/21/2020
+Modified by: Dustin Bryant
+Modification log: First Draft
+Added ID and Classes for collapsing the table contents
+Added project examples table
+-->
 
 <html lang="en">
 
@@ -16,7 +25,7 @@
 </head>
 <body>    
     <header>
-    <a href="index.html"><img src="images/default_user_icon.png" alt="user icon" style="height:150px;width:auto;"/></a>
+    <a href="index.html"><img src="images/logo.svg" alt="user icon" style="height:150px;width:auto;"/></a>
     <h1>Dustin Bryant</h1>    
     <nav>
         <ul>
@@ -24,18 +33,21 @@
             <li class="fade"><a href="about.html">About</a></li>
             <li class="fade"><a href="experience.html">Experience</a></li>
             <li class="fade"><a href="contact.html">Contact</a></li>
+            <li class="fade"><a href="login.php">Admin</a></li>
         </ul>
     </nav>
     </header>
 <main>
-    <table class="exp">
-        <thead>
-            <tr>
-            <th>Technologies</th>
-            <th>Years</th>
-            </tr>
-        </thead>
-            <tbody>
+    <br>
+        <div id="heading">
+        <table class="exp" ><!-- Added the exp class in order to differentiate the table styles for this page from the table in the form in the contact page -->
+            <thead >
+                <tr >
+                    <th>Technologies</th>
+                    <th>Years of Experience</th>
+                </tr>
+            </thead>
+            <tbody class="answer-hide">
                 <tr>
                     <td>C#</td>
                     <td>1*</td>
@@ -54,54 +66,81 @@
                         <td colspan="2">*Years of experience are approximate.</td>
                     </tr>
             </tfoot>
-    </table>
-    <br>
-    <table class="exp">
-        <thead>
-            <tr>
-                <th colspan="2">Education</th>   
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>Curently working on AAS - Software Development - College of Western Idaho</td>
-            </tr>
-            <tr>
-                <td>AAS - Computer Network Systems - ITT Technical Institute</td>
-            <tr>
-            </tr>
-                <td>High School Diploma - Boise High School</td>
-            </tr>
-        </tbody>
-    </table>
-    <br>
-    <table class="exp">
-        <thead>
-            <tr>
-                <th colspan="2">Work Experience</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>Tutoring Internship - College of Western Idaho</td>
-            </tr>
-            <tr>
-                <td>Technical Writer - Hewlett-Packard Inc.</td>
-            </tr>
-            <tr>
-                <td>Photo Database Coordinator - Tri-Digital Group</td>
-            </tr>
-        </tbody>
-    </table>
-    <br>
+        </table>
+        <br>
+        <table class="exp">
+            <thead >
+                <tr>
+                    <th>Education</th>
+                    <th>Date of Graduation</th>   
+                </tr>
+            </thead>
+            <tbody class="answer-hide">
+                <tr>
+                    <td>Currently working on AAS - Software Development - College of Western Idaho</td>
+                    <td>June 2021</td>
+                </tr>
+                <tr>
+                    <td>AAS - Computer Network Systems - ITT Technical Institute</td>
+                    <td>December 2002</td>
+                </tr>
+                <tr>
+                    <td>High School Diploma - Boise High School</td>
+                    <td>June 1998</td>
+                </tr>
+            </tbody>
+        </table>
+        <br>
+        <table class="exp">
+            <thead >
+                <tr>
+                    <th>Work Experience</th>
+                    <th>Dates</th>
+                </tr>
+            </thead>
+            <tbody class="answer-hide">
+                <tr>
+                    <td>Tutoring Internship - College of Western Idaho</td>
+                    <td>Upcoming</td>
+                </tr>
+                <tr>
+                    <td>Technical Writer - Hewlett-Packard Inc.</td>
+                    <td>August 2008 - Present</td>
+                </tr>
+                <tr>
+                    <td>Photo Database Coordinator - Tri-Digital Group</td>
+                    <td>November 2004 - June 2007</td>
+                </tr>
+            </tbody>
+        </table>
+        <br>
+        <table class="exp">
+            <thead >
+                <tr>
+                    <th>Project Examples</th>
+                    <th>Links</th>
+                </tr>
+            </thead>
+            <tbody class="answer-hide">
+                <tr>
+                    <td>Vacation Website for my JavaScript Class</td>
+                    <td><a href="http://fall2019dustin.w3expressions.org/project5/index.html">Project #5</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+        <br>
 </main>
-<footer id="bottom">        
-            Email: <a href="mailto:dustinbryant@my.cwi.edu">dustinbryant@my.cwi.edu</a><br>
-            Phone: <a href="tel:+12088907307">208-890-7307</a>        
+<footer>
+    <div id="bottom"><!-- The bottom id aligns the contact info. -->        
+        Email: <a href="mailto:dustinbryant@my.cwi.edu">dustinbryant@my.cwi.edu</a><br>
+        Phone: <a href="tel:+12088907307">208-890-7307</a>              
         <div>
-            <a href="https://www.github.com" target="_blank"><img src="images/github-48.png" alt="githup logo"></a>
-            <a href="https://www.linkedin.com" target="_blank"><img src="images/linkedin-48.png" alt="githup logo"></a>
-        </div>                    
+            <a href="https://www.github.com" target="_blank"><img src="images/github-48_gray.png" alt="githup logo"></a>
+            <a href="https://www.linkedin.com" target="_blank"><img src="images/linkedin-48_gray.png" alt="githup logo"></a>
+        </div> 
+    </div>                   
 </footer>
+<script src="js/cell_collapse.js"></script>
 </body>
 </html>
