--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 
-<!-- Dustin Bryant 11/7/19 -->
+<!-- 
+Original Author: Dustin Bryant
+Date Created: 11/7/19
+Version: 1.0
+Date Last Modified: 11/7/19
+Modified by: Dustin Bryant
+Modification log: First Draft
+-->
 
 <html lang="en">
 
@@ -17,39 +24,39 @@
 
 <body>    
     <header>
-    <a href="index.html"><img src="images/default_user_icon.png" alt="user icon" style="height:150px;width:auto;"/></a>
+    <a href="index.html"><img src="images/logo.svg" alt="dustin bryant's logo" /></a>
     <h1>Dustin Bryant</h1>
     <nav>
         <ul>
             <li class="fade"><a href="index.html">Home</a></li>
             <li class="fade"><a href="about.html">About</a></li>
             <li class="fade"><a href="experience.html">Experience</a></li>
-            <li class="fade"><a href="contact.html">Contact</a></li>            
+            <li class="fade"><a href="contact.html">Contact</a></li>
+            <li class="fade"><a href="login.php">Admin</a></li>            
         </ul>
     </nav>
         </header>
     <main>
-        <p>
-            My name is <span>Dustin Bryant</span>. I have recently set myself down the path to become a professional
-            software developer. I am currently in my first semester at the College of Western Idaho. Software
+        <p><span>Hi! I'm Dustin</span>. I have recently set myself on a path to become a professional
+            software developer. I'm in my first semester at the College of Western Idaho. Software
             development has always been of great interest to me and I believe I have many qualities that
             would make me an asset to your company.</p>
-
-            <p>I am a strong problem solver that can work independently or in a team. I have an obsessively attention
-            to detail and cannot rest until I am satisfied. My communication skills are excellent so I am comfortable
-            dealing with customers or behind the scenes.
-        </p>
-    <div>
-        <a id="hireme" href="contact.html">Hire Me Today</a>
-    </div>
-    </main>
-    <footer id="bottom">        
-            Email: <a href="mailto:dustinbryant@my.cwi.edu">dustinbryant@my.cwi.edu</a><br>
-            Phone: <a href="tel:+12088907307">208-890-7307</a>        
+        <p>I'm a determined problem solver that can work independently or in a team. I'm obsessed with
+         detail and can't rest until I'm satisfied. My communication skills are excellent so I'm comfortable
+        in front of customers or behind the scenes.</p>
         <div>
-            <a href="https://www.github.com" target="_blank"><img src="images/github-48.png" alt="githup logo"></a>
-            <a href="https://www.linkedin.com" target="_blank"><img src="images/linkedin-48.png" alt="githup logo"></a>
-        </div>                    
-    </footer>
+            <a id="hireme" href="contact.html">Let's chat</a>
+        </div>
+    </main>
+   <footer>
+            <div id="bottom"><!-- The bottom id aligns the contact info. -->        
+                Email: <a href="mailto:dustinbryant@my.cwi.edu">dustinbryant@my.cwi.edu</a><br>
+                Phone: <a href="tel:+12088907307">208-890-7307</a>              
+                <div>
+                    <a href="https://www.github.com" target="_blank"><img src="images/github-48_gray.png" alt="githup logo"></a>
+                    <a href="https://www.linkedin.com" target="_blank"><img src="images/linkedin-48_gray.png" alt="githup logo"></a>
+                </div> 
+            </div>                   
+        </footer>
 </body>
 </html>
