--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ Modification log: First Draft
             <li class="fade"><a href="about.html">About</a></li>
             <li class="fade"><a href="experience.html">Experience</a></li>
             <li class="fade"><a href="contact.html">Contact</a></li>
-            <li class="fade"><a href="login.php">Admin</a></li>            
+            <li class="fade"><a href="admin.php">Admin</a></li>            
         </ul>
     </nav>
         </header>
@@ -53,8 +53,8 @@ Modification log: First Draft
                 Email: <a href="mailto:dustinbryant@my.cwi.edu">dustinbryant@my.cwi.edu</a><br>
                 Phone: <a href="tel:+12088907307">208-890-7307</a>              
                 <div>
-                    <a href="https://www.github.com" target="_blank"><img src="images/github-48_gray.png" alt="githup logo"></a>
-                    <a href="https://www.linkedin.com" target="_blank"><img src="images/linkedin-48_gray.png" alt="githup logo"></a>
+                    <a href="https://www.github.com/dbryant007" target="_blank"><img src="images/github-48_gray.png" alt="githup logo"></a>
+                    <a href="https://www.linkedin.com/in/dustin-bryant-00240a173" target="_blank"><img src="images/linkedin-48_gray.png" alt="githup logo"></a>
                 </div> 
             </div>                   
         </footer>
