--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@ Modification log: First Draft
             <li class="fade"><a href="about.html">About</a></li>
             <li class="fade"><a href="experience.html">Experience</a></li>
             <li class="fade"><a href="contact.html">Contact</a></li>
-            <li class="fade"><a href="login.php">Admin</a></li>
+            <li class="fade"><a href="admin.php">Admin</a></li>
             
         </ul>
     </nav>
