--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
                 <li class="fade"><a href="about.html">About</a></li>
                 <li class="fade"><a href="experience.html">Experience</a></li>
                 <li class="fade"><a href="contact.html">Contact</a></li>  
-                <li class="fade"><a href="login.php">Admin</a></li>
+                <li class="fade"><a href="admin.php">Admin</a></li>
             </ul>
         </nav>
     </header>
