--- a/experience.html
+++ b/experience.html
@@ -58,6 +58,26 @@ Added project examples table
                     <td>CSS3</td>
                     <td>1*</td>
                 </tr>
+                <tr>
+                    <td>JavaScript</td>
+                    <td>1*</td>
+                </tr>
+                <tr>
+                    <td>PHP</td>
+                    <td>1*</td>
+                </tr>
+                <tr>
+                    <td>SQL</td>
+                    <td>1*</td>
+                </tr>
+                <tr>
+                    <td>Xamarin</td>
+                    <td>1*</td>
+                </tr>
+                <tr>
+                    <td>Unity</td>
+                    <td>1*</td>
+                </tr>
             </tbody>
             <tfoot>
                     <tr >
@@ -125,8 +145,12 @@ Added project examples table
                     <td><a href="https://dbryant007.github.io/project2/index.html">Link</td>
                 </tr>
                 <tr>
-                    <td>Vacation Website created using Bootstrap</td>
+                    <td>Parallax Practice</td>
                     <td><a href="https://dbryant007.github.io/project2/index.html">Link</td>
+                </tr>
+                <tr>
+                    <td>Atari Combat recreated in Unity</td>
+                    <td><a href="https://sharemygame.com/@eatmoremeat/combat">Link</td>
                 </tr>
             </tbody>
         </table>
