--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ Modification log: First Draft
             development has always been of great interest to me and I believe I have many qualities that
             would make me an asset to your company.</p>
         <p>I'm a determined problem solver that can work independently or in a team. I'm obsessed with
-         detail and can't rest until I'm satisfied. My communication skills are excellent so I'm comfortable
+         detail and cannot rest until every bug is fixed. My communication skills are excellent so I'm comfortable
         in front of customers or behind the scenes.</p>
         <div>
             <a id="hireme" href="contact.html">Let's chat</a>
