--- a/experience.html
+++ b/experience.html
@@ -146,7 +146,7 @@ Added project examples table
                 </tr>
                 <tr>
                     <td>Parallax Practice</td>
-                    <td><a href="https://dbryant007.github.io/project2/index.html">Link</td>
+                    <td><a href="https://dbryant007.github.io/Week2_Parallax/index.html">Link</td>
                 </tr>
                 <tr>
                     <td>Atari Combat recreated in Unity</td>
