--- a/experience.html
+++ b/experience.html
@@ -13,6 +13,7 @@ Added project examples table
 
 <html lang="en">
 <head>
+    <link rel="icon" type="image/ico" href="/images/favicon.ico"/>
     <meta charset="utf-8">
     <meta name="description" content="Dustin Bryant's software development portfolio">
     <meta name="keywords" content="Dustin Bryant, portfolio, programmer, sofware development">
