--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@ Modification log: First Draft
 
 <html lang="en">
 <head>
+    <link rel="icon" type="image/ico" href="/images/favicon.ico"/>
     <meta charset="utf-8">
     <meta name="description" content="Dustin Bryant's software development portfolio">
     <meta name="keywords" content="Dustin Bryant, portfolio, programmer, sofware development">
