updated favicons and links
update the favicons on 2 pages and updated the linkedin and githup urls

--- a/about.html
+++ b/about.html
@@ -11,6 +11,7 @@ Modification log: First Draft
 
 <html lang="en">
 <head>
+    <link rel="icon" type="image/ico" href="/images/favicon.ico"/>
     <meta charset="utf-8">
     <meta name="description" content="Dustin Bryant's software development portfolio">
     <meta name="keywords" content="Dustin Bryant, portfolio, programmer, sofware development">
@@ -50,8 +51,8 @@ Modification log: First Draft
             Email: <a href="mailto:dustinbryant@my.cwi.edu">dustinbryant@my.cwi.edu</a><br>
             Phone: <a href="tel:+12088907307">208-890-7307</a>              
             <div>
-                <a href="https://www.github.com" target="_blank"><img src="images/github-48_gray.png" alt="githup logo"></a>
-                <a href="https://www.linkedin.com" target="_blank"><img src="images/linkedin-48_gray.png" alt="githup logo"></a>
+                <a href="https://github.com/dbryant007" target="_blank"><img src="images/github-48_gray.png" alt="githup logo"></a>
+                <a href="https://www.linkedin.com/in/dustin-bryant-00240a173/" target="_blank"><img src="images/linkedin-48_gray.png" alt="githup logo"></a>
             </div> 
         </div>                   
     </footer>
