--- a/experience.html
+++ b/experience.html
@@ -163,8 +163,8 @@ Added project examples table
                 Email: <a href="mailto:dustinbryant@my.cwi.edu">dustinbryant@my.cwi.edu</a><br>
                 Phone: <a href="tel:+12088907307">208-890-7307</a>              
                 <div>
-                    <a href="https://www.github.com" target="_blank"><img src="images/github-48_gray.png" alt="githup logo"></a>
-                    <a href="https://www.linkedin.com" target="_blank"><img src="images/linkedin-48_gray.png" alt="githup logo"></a>
+                    <a href="https://github.com/dbryant007" target="_blank"><img src="images/github-48_gray.png" alt="githup logo"></a>
+                    <a href="https://www.linkedin.com/in/dustin-bryant-00240a173/" target="_blank"><img src="images/linkedin-48_gray.png" alt="githup logo"></a>
                 </div> 
             </div>                   
         </footer>
