adding more favicons and cwi linkedin
adding more favicons and cwi linkedin

--- a/about.html
+++ b/about.html
@@ -27,10 +27,10 @@ Modification log: First Draft
         <h1>Dustin Bryant - About</h1>    
         <nav>
             <ul>
-                <li class="fade"><a href="index.html">Home</a></li>
-                <li class="fade"><a href="about.html">About</a></li>
-                <li class="fade"><a href="experience.html">Experience</a></li>
-                <li class="fade"><a href="contact.html">Contact</a></li>                
+                <li class="fade"><a href="index.html" target="_blank">Home</a></li>
+                <li class="fade"><a href="about.html" target="_blank">About</a></li>
+                <li class="fade"><a href="experience.html" target="_blank">Experience</a></li>
+                <li class="fade"><a href="contact.html" target="_blank">Contact</a></li>                
             </ul>
         </nav>
     </header>
