--- a/experience.html
+++ b/experience.html
@@ -96,7 +96,7 @@ Added project examples table
             </thead>
             <tbody class="answer-hide">
                 <tr>
-                    <td>Currently working on AAS - Software Development - College of Western Idaho</td>
+                    <td>Currently working on AAS - Software Development - College of Western Idaho<br><a href="https://www.linkedin.com/in/cwi-swdv-66b602173/" target="_blank">CWI SWDV LinkedIn Page</a></td>
                     <td>June 2021</td>
                 </tr>
                 <tr>
@@ -143,15 +143,15 @@ Added project examples table
             <tbody class="answer-hide">
                 <tr>
                     <td>Vacation Website created using Bootstrap</td>
-                    <td><a href="https://dbryant007.github.io/project2/index.html">Link</td>
+                    <td><a href="https://dbryant007.github.io/project2/index.html" target="_blank">Link</td>
                 </tr>
                 <tr>
                     <td>Parallax Practice</td>
-                    <td><a href="https://dbryant007.github.io/Week2_Parallax/index.html">Link</td>
+                    <td><a href="https://dbryant007.github.io/Week2_Parallax/index.html" target="_blank">Link</td>
                 </tr>
                 <tr>
                     <td>Atari Combat recreated in Unity</td>
-                    <td><a href="https://sharemygame.com/@eatmoremeat/combat">Link</td>
+                    <td><a href="https://sharemygame.com/@eatmoremeat/combat" target="_blank">Link</td>
                 </tr>
             </tbody>
         </table>
