--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ Modification log: First Draft
                 Phone: <a href="tel:+12088907307">208-890-7307</a>              
                 <div>
                     <a href="https://github.com/dbryant007" target="_blank"><img src="images/github-48_gray.png" alt="githup logo"></a>
-                    <a href="https://www.linkedin.com/in/dustin-bryant-00240a173/" target="_blank"><img src="images/linkedin-48_gray.png" alt="githup logo"></a>
+                    <a href="https://www.linkedin.com/in/dustin-bryant-00240a173/" target="_blank"><img src="images/linkedin-48_gray.png" alt="linkedin logo"></a>
                 </div> 
             </div>                   
         </footer>
