--- a/experience.html
+++ b/experience.html
@@ -42,7 +42,7 @@ Added project examples table
         <table class="exp" ><!-- Added the exp class in order to differentiate the table styles for this page from the table in the form in the contact page -->
             <thead >
                 <tr >
-                    <th>Technologies</th>
+                    <th> + Technologies</th>
                     <th>Years of Experience</th>
                 </tr>
             </thead>
@@ -90,7 +90,7 @@ Added project examples table
         <table class="exp">
             <thead >
                 <tr>
-                    <th>Education</th>
+                    <th> + Education</th>
                     <th>Date of Graduation</th>   
                 </tr>
             </thead>
@@ -113,7 +113,7 @@ Added project examples table
         <table class="exp">
             <thead >
                 <tr>
-                    <th>Work Experience</th>
+                    <th> + Work Experience</th>
                     <th>Dates</th>
                 </tr>
             </thead>
@@ -136,7 +136,7 @@ Added project examples table
         <table class="exp">
             <thead >
                 <tr>
-                    <th>Project Examples</th>
+                    <th> + Project Examples</th>
                     <th>Links</th>
                 </tr>
             </thead>
