--- a/project2/index.html
+++ b/project2/index.html
@@ -1,13 +1,4 @@
-<!--
-
-Original Author: Dustin Bryant
-Date Created: 1/15/2020
-Version: 1.2
-Date Last Modified: 1/25/2020
-Modified by: Dustin Bryant
-Modification log: First Draft
-
---><!DOCTYPE html>
+<!DOCTYPE html>
 <html style="background-repeat: no-repeat;">
 
 <head>
@@ -26,17 +17,16 @@ Modification log: First Draft
 <body style="background:rgb(47, 23, 15);">
     <h1 class="text-center text-white d-none d-lg-block site-heading"><span class="text-primary site-heading-upper mb-3">He is out there...</span><span class="site-heading-lower">Bigfoot Adventures</span></h1>
     <nav class="navbar navbar-light navbar-expand-lg bg-dark py-lg-4" id="mainNav">
-        <div class="container"><a class="navbar-brand text-uppercase d-lg-none text-expanded" href="#">Brand</a><button data-toggle="collapse" data-target="#navbarResponsive" class="navbar-toggler" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-            <div
-                class="collapse navbar-collapse" id="navbarResponsive">
+        <div class="container"><a class="navbar-brand text-uppercase d-lg-none text-expanded" href="#">BIGFOOT ADVENTURES</a><button data-toggle="collapse" data-target="#navbarResponsive" class="navbar-toggler" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="nav navbar-nav mx-auto">
                     <li class="nav-item" role="presentation"><a class="nav-link" href="index.html">Home</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="about.html">About us</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="about.html">contact us</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="reserve.html">reservations</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="faq.html">faq</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="employees.html">employees</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="Testemonials.html">Testemonials</a></li>
                 </ul>
-        </div>
+            </div>
         </div>
     </nav>
     <section class="page-section clearfix">
