--- a/project2/faq.html
+++ b/project2/faq.html
@@ -15,27 +15,85 @@
 <body style="background:rgb(47, 23, 15);">
     <h1 class="text-center text-white d-none d-lg-block site-heading"><span class="text-primary site-heading-upper mb-3">He is out there...</span><span class="site-heading-lower">Bigfoot Adventures</span></h1>
     <nav class="navbar navbar-light navbar-expand-lg bg-dark py-lg-4" id="mainNav">
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-            <ul class="nav navbar-nav mx-auto">
-                <li class="nav-item" role="presentation"><a class="nav-link" href="index.html">Home</a></li>
-                <li class="nav-item" role="presentation"><a class="nav-link" href="about.html">About us</a></li>
-                <li class="nav-item" role="presentation"><a class="nav-link" href="reserve.html">reservations</a></li>
-                <li class="nav-item" role="presentation"><a class="nav-link" href="faq.html">faq</a></li>
-                <li class="nav-item" role="presentation"><a class="nav-link" href="employees.html">employees</a></li>
-            </ul>
+        <div class="container"><a class="navbar-brand text-uppercase d-lg-none text-expanded" href="#">BIGFOOT ADVENTURES</a><button data-toggle="collapse" data-target="#navbarResponsive" class="navbar-toggler" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="nav navbar-nav mx-auto">
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="index.html">Home</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="about.html">contact us</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="reserve.html">reservations</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="faq.html">faq</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="testemonials.html">testemonials</a></li>
+                </ul>
+            </div>
         </div>
     </nav>
-    <section class="page-section cta">
+    <!-- <section class="page-section cta">
         <div class="container">
             <div class="row">
                 <div class="col-xl-9 mx-auto">
                     <div class="cta-inner text-center rounded">
-                        <h2 class="section-heading mb-5"><span class="section-heading-lower">FAQ</span></h2>
+                        
                         <ul class="list-unstyled mx-auto list-hours mb-5 text-left" id="faqs">
                             <li class="d-flex list-unstyled-item list-hours-item">Do you have a "Nessie" tour?<span class="ml-auto">Our Lockness getaway is in development as we speak! We hope to have it ready for guests this summer.</span></li>
                             <li class="d-flex list-unstyled-item list-hours-item" >Are (insert mythical best here) real?<span class="ml-auto">We've seen plenty. Head on over to our reservation page if you'd like to see one as well.</span></li>
                             <li class="d-flex list-unstyled-item list-hours-item">Can we bring our own camera?<span class="ml-auto">Of course! Our guides are trained photographers as well and have a camera on them at all times.</span></li>
                         </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section> -->
+     <section class="page-section cta">
+        <div class="container">
+            <div class="row">
+                <div class="col-xl-9 mx-auto">
+                    <div class="cta-inner text-center rounded">
+                        <h2 class="section-heading mb-4"><span class="section-heading-lower">FAQ</span></h2>
+                        <div class="accordion" id="accordionExample">
+                            <div class="card">
+                              <div class="card-header" id="headingOne">
+                                <h2 class="mb-0">
+                                  <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                    Do you have a "Nessie" tour?
+                                  </button>
+                                </h2>
+                              </div>
+                          
+                              <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
+                                <div class="card-body">
+                                    Our Lockness getaway is in development as we speak! We hope to have it ready for guests this summer.
+                                </div>
+                              </div>
+                            </div>
+                            <div class="card">
+                              <div class="card-header" id="headingTwo">
+                                <h2 class="mb-0">
+                                  <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                    Are (insert mythical best here) real?
+                                  </button>
+                                </h2>
+                              </div>
+                              <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
+                                <div class="card-body">
+                                    We've seen plenty. Head on over to our reservation page if you'd like to see one as well.
+                                </div>
+                              </div>
+                            </div>
+                            <div class="card">
+                              <div class="card-header" id="headingThree">
+                                <h2 class="mb-0">
+                                  <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                                    Can we bring our own camera?
+                                  </button>
+                                </h2>
+                              </div>
+                              <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
+                                <div class="card-body">
+                                    Of course! Our guides are trained photographers as well and have a camera on them at all times.
+                                </div>
+                              </div>
+                            </div>
+                          </div>
                     </div>
                 </div>
             </div>
@@ -48,7 +106,7 @@
     </footer>
     <script src="js/jquery.min.js"></script>
     <script src="bootstrap/js/bootstrap.min.js"></script>
-    <script src="js/current-day.js"></script>
+    <!-- <script src="js/current-day.js"></script> -->
     <script src="js/faqs.js"></script>
 </body>
 
