--- a/bigfootadventures/about.html
+++ b/bigfootadventures/about.html
@@ -21,7 +21,7 @@
                     <li class="nav-item" role="presentation"><a class="nav-link" href="about.html">Contact Us</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="reserve.html">Reservations</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="faq.html">Faq</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="Testemonials.html">Testemonials</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="Testimonials.html">Testimonials</a></li>
                 </ul>
             </div>
         </div>
