--- a/bigfootadventures/faq.html
+++ b/bigfootadventures/faq.html
@@ -22,7 +22,7 @@
                     <li class="nav-item" role="presentation"><a class="nav-link" href="about.html">contact us</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="reserve.html">reservations</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="faq.html">faq</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="testemonials.html">testemonials</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="testimonials.html">testimonials</a></li>
                 </ul>
             </div>
         </div>
