--- a/bigfootadventures/reserve.html
+++ b/bigfootadventures/reserve.html
@@ -21,7 +21,7 @@
             <li class="nav-item" role="presentation"><a class="nav-link" href="about.html">Contact us</a></li>
             <li class="nav-item" role="presentation"><a class="nav-link" href="reserve.html">reservations</a></li>
             <li class="nav-item" role="presentation"><a class="nav-link" href="faq.html">faq</a></li>
-            <li class="nav-item" role="presentation"><a class="nav-link" href="Testemonials.html">Testemonials</a></li>
+            <li class="nav-item" role="presentation"><a class="nav-link" href="Testimonials.html">Testimonials</a></li>
           </ul>        
         </div>
       </div>
