--- a/bigfootadventures/testimonials.html
+++ b/bigfootadventures/testimonials.html
@@ -22,7 +22,7 @@
             <li class="nav-item" role="presentation"><a class="nav-link" href="about.html">Contact Us</a></li>
             <li class="nav-item" role="presentation"><a class="nav-link" href="reserve.html">Reservations</a></li>
             <li class="nav-item" role="presentation"><a class="nav-link" href="faq.html">Faq</a></li>
-            <li class="nav-item" role="presentation"><a class="nav-link" href="testemonials.html">Testemonials</a></li>
+            <li class="nav-item" role="presentation"><a class="nav-link" href="testimonials.html">Testimonials</a></li>
           </ul>
         </div>
       </div>        
@@ -32,7 +32,7 @@
         <div class="row">
           <div class="col-xl-9 mx-auto">
             <div class="cta-inner text-center rounded">
-              <h2 class="section-heading mb-5"><span class="section-heading-lower">Testemonials</span></h2>  
+              <h2 class="section-heading mb-5"><span class="section-heading-lower">Testimonials</span></h2>  
                 <div class="bd-example">
                     <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
                       <ol class="carousel-indicators">
@@ -42,21 +42,21 @@
                       </ol>
                       <div class="carousel-inner">
                         <div class="carousel-item active">
-                          <img src="../project2/img/pacnorthwest_test.jpg" class="d-block w-100" alt="...">
+                          <img src="../bigfootadventures/img/pacnorthwest_test.jpg" class="d-block w-100" alt="...">
                           <div class="carousel-caption d-none d-md-block">
                             <h5>Pacific Northwest Forest Tour</h5>
                             <p>"We had such an amazing time!" - Fiona Chataway - March 2022</p>
                           </div>
                         </div>
                         <div class="carousel-item">
-                          <img src="../project2/img/canada_test.jpg" class="d-block w-100" alt="...">
+                          <img src="../bigfootadventures/img/canada_test.jpg" class="d-block w-100" alt="...">
                           <div class="carousel-caption d-none d-md-block">
                             <h5>Canadian Wilderness Tour</h5>
                             <p>"Our guides Yeti sniffing dog caught a whiff of something...." - Alexander Haberdash - January 2022</p>
                           </div>
                         </div>
                         <div class="carousel-item">
-                          <img src="../project2/img/central_test.jpg" class="d-block w-100" alt="...">
+                          <img src="../bigfootadventures/img/central_test.jpg" class="d-block w-100" alt="...">
                           <div class="carousel-caption d-none d-md-block">
                             <h5>Central American Lava Flow Tour</h5>
                             <p>"We are pretty sure the Chupcabra was in the lave tube with us, but it was just too good at hiding!" - Gail Weatherby - August 2021</p>
