Fixed typos and grammar

--- a/bigfootadventures/index.html
+++ b/bigfootadventures/index.html
@@ -4,6 +4,8 @@
 <head>
     <link rel="icon" type="image/png" href="img/favicon-16x16.png"/>
     <meta charset="utf-8">
+    <meta name="description" content="Guided Bigfoot Adventures">
+    <meta name="keywords" content="bigfoot, sasquatch, yeti, chupacabra, tour, adventure, pacific, northwest, central, america, canada, backpacking, hiking, mythical, creatures"
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Home</title>
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
@@ -31,10 +33,10 @@
     </nav>
     <section class="page-section clearfix">
         <div class="container">
-            <div class="intro"><img class="img-fluid intro-img mb-3 mb-lg-0 rounded" src="img/pacnw1.jpg" style="background-color: #3f302b;">
+            <div class="intro"><img class="img-fluid intro-img mb-3 mb-lg-0 rounded" alt="trail weaving thru a lush, green woods" src="img/pacnw1.jpg" style="background-color: #3f302b;">
                 <div class="intro-text left-0 text-centerfaded p-5 rounded bg-faded text-center">
                     <h2 class="section-heading mb-4"><span class="section-heading-upper"></span><span class="section-heading-lower">Searching for sasquatch?</span></h2>
-                    <p class="mb-3">We can help you out! Take a look at our pacific northwest package.</p>
+                    <p class="mb-3">We can help! Take a look at our Pacific Northwest package.</p>
                     <div class="mx-auto intro-button"></div>
                 </div>
             </div>
@@ -42,7 +44,7 @@
     </section>
     <section class="page-section clearfix">
         <div class="container">
-            <div class="intro"><img class="img-fluid intro-img mb-3 mb-lg-0 rounded" src="img/canada.jpg">
+            <div class="intro"><img class="img-fluid intro-img mb-3 mb-lg-0 rounded" alt="Vast snowy, Canadian wilderness" src="img/canada.jpg">
                 <div class="intro-text left-0 text-centerfaded p-5 rounded bg-faded text-center">
                     <h2 class="section-heading mb-4"><span class="section-heading-upper"></span><span class="section-heading-lower">Yearning to see a yeti?</span></h2>
                     <p class="mb-3">Look no further! Give our Canadian wilderness adventure a gander.</p>
@@ -53,7 +55,7 @@
     </section>
     <section class="page-section clearfix">
         <div class="container">
-            <div class="intro"><img class="img-fluid intro-img mb-3 mb-lg-0 rounded" src="img/desert.jpg">
+            <div class="intro"><img class="img-fluid intro-img mb-3 mb-lg-0 rounded" alt="path thru a barren lava field" src="img/desert.jpg">
                 <div class="intro-text left-0 text-centerfaded p-5 rounded bg-faded text-center">
                     <h2 class="section-heading mb-4"><span class="section-heading-upper"></span><span class="section-heading-lower">In lova with chupacabra?&nbsp;</span></h2>
                     <p class="mb-3">You'll fall in love with our Central America lava cave expedition.</p>
