--- a/bigfootadventures/faq.html
+++ b/bigfootadventures/faq.html
@@ -61,7 +61,7 @@
                           
                               <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
                                 <div class="card-body">
-                                    Our Lockness getaway is in development as we speak! We hope to have it ready for guests this summer.
+                                    Our Lochness getaway is in development as we speak! We hope to have it ready for guests this summer.
                                 </div>
                               </div>
                             </div>
@@ -69,13 +69,13 @@
                               <div class="card-header" id="headingTwo">
                                 <h2 class="mb-0">
                                   <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                                    Are (insert mythical best here) real?
+                                    Are (insert mythical beast here) real?
                                   </button>
                                 </h2>
                               </div>
                               <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
                                 <div class="card-body">
-                                    We've seen plenty. Head on over to our reservation page if you'd like to see one as well.
+                                    We've seen plenty. Head on over to our reservation page if you'd like to see one.
                                 </div>
                               </div>
                             </div>
