--- a/bigfootadventures/reserve.html
+++ b/bigfootadventures/reserve.html
@@ -40,7 +40,7 @@
                       <div class="d-flex align-items-center"><i class="fa fa-calendar fa-3x mr-3"></i>
                         <h2 class="month font-weight-bold mb-0 text-uppercase">MAY 2022</h2>
                       </div>
-                      <p class="font-italic text-muted mb-5">No events for this day.</p>
+                      <p class="font-italic text-muted mb-5"></p>
                       <ol class="day-names list-unstyled">
                         <li class="font-weight-bold text-uppercase">Sun</li>
                         <li class="font-weight-bold text-uppercase">Mon</li>
