--- a/bigfootadventures/testimonials.html
+++ b/bigfootadventures/testimonials.html
@@ -13,7 +13,8 @@
     <link rel="stylesheet" href="css/style.css">   
 </head>
 <body style="background:rgb(47, 23, 15)">
-    <h1 class="text-center text-white d-none d-lg-block site-heading"><span class="text-primary site-heading-upper mb-3">He is out there...</span><span class="site-heading-lower">bigfoot adventures</span></h1>
+  <div id="google_translate_element"></div>  
+  <h1 class="text-center text-white d-none d-lg-block site-heading"><span class="text-primary site-heading-upper mb-3">He is out there...</span><span class="site-heading-lower">bigfoot adventures</span></h1>
     <nav class="navbar navbar-light navbar-expand-lg bg-dark py-lg-4" id="mainNav">
       <div class="container"><a class="navbar-brand text-uppercase d-lg-none text-expanded" href="#">BIGFOOT ADVENTURES</a><button data-toggle="collapse" data-target="#navbarResponsive" class="navbar-toggler" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>  
         <div class="collapse navbar-collapse" id="navbarResponsive">
@@ -42,24 +43,24 @@
                       </ol>
                       <div class="carousel-inner">
                         <div class="carousel-item active">
-                          <img src="../bigfootadventures/img/pacnorthwest_test.jpg" class="d-block w-100" alt="...">
+                          <img src="../bigfootadventures/img/pacnorthwest_test.jpg" alt="young boy walking down a trail in a misty forest" class="d-block w-100" alt="...">
                           <div class="carousel-caption d-none d-md-block">
                             <h5>Pacific Northwest Forest Tour</h5>
                             <p>"We had such an amazing time!" - Fiona Chataway - March 2022</p>
                           </div>
                         </div>
                         <div class="carousel-item">
-                          <img src="../bigfootadventures/img/canada_test.jpg" class="d-block w-100" alt="...">
+                          <img src="../bigfootadventures/img/canada_test.jpg" alt="fierce dog on a path in the snowy, Canadian wilderness" class="d-block w-100" alt="...">
                           <div class="carousel-caption d-none d-md-block">
                             <h5>Canadian Wilderness Tour</h5>
-                            <p>"Our guides Yeti sniffing dog caught a whiff of something...." - Alexander Haberdash - January 2022</p>
+                            <p>"Our guide's Yeti-sniffing dog caught a whiff of something..." - Alexander Haberdash - January 2022</p>
                           </div>
                         </div>
                         <div class="carousel-item">
-                          <img src="../bigfootadventures/img/central_test.jpg" class="d-block w-100" alt="...">
+                          <img src="../bigfootadventures/img/central_test.jpg" alt="young girl exploring a lava tube" class="d-block w-100" alt="...">
                           <div class="carousel-caption d-none d-md-block">
                             <h5>Central American Lava Flow Tour</h5>
-                            <p>"We are pretty sure the Chupcabra was in the lave tube with us, but it was just too good at hiding!" - Gail Weatherby - August 2021</p>
+                            <p>"We are pretty sure the Chupcabra was in the lava tube with us, but it was just too good at hiding!" - Gail Weatherby - August 2021</p>
                           </div>
                         </div>
                       </div>
